# workshop-babylotse

./: 00_classify_comments.ipynb  01_analyze_comments.ipynb  LICENSE_DATA  README.md  data.py  example_groq.ipynb  example_ollama.ipynb  example_openai.ipynb  prompt.py  pyproject.toml  spacy_analysis.ipynb  stadteile_utils.py  stadtteile.ipynb
artifacts/: neg_results.pkl  pos_results.pkl  response_cat.pkl  response_final.pkl  response_refined.pkl
batch/: batch_jobs.pkl  batchinput_batch_1.json  batchinput_batch_10.json  batchinput_batch_11.json  batchinput_batch_12.json  batchinput_batch_13.json  batchinput_batch_14.json  batchinput_batch_15.json  batchinput_batch_16.json  batchinput_batch_17.json  batchinput_batch_18.json  batchinput_batch_19.json  batchinput_batch_2.json  batchinput_batch_3.json  batchinput_batch_4.json  batchinput_batch_5.json  batchinput_batch_6.json  batchinput_batch_7.json  batchinput_batch_8.json  batchinput_batch_9.json  file-50ByNeBmGYt1Kt2rHSSQqDgT.jsonl  file-6drCg1Xt53GrHq31rWlfNxHA.jsonl  file-7WDyBR7jUlyC5BlvAFYPUaDk.jsonl  file-9HreWHKMHGpx762wTUTNp6QV.jsonl  file-CdfLQcNY8gOZL2Nc6AswFurh.jsonl  file-NTW9u0jz2Z0CY4FIDyAnpivx.jsonl  file-Ny1lAMPVh5qshoaFJfmxImlr.jsonl  file-Ow4Z8TEHKWT0uQlFrNwtrJie.jsonl  file-Pf0KFYXvwEmpgVvsB9DkQXD4.jsonl  file-UdsJ87csYFjTtDI0mrb1Pdk4.jsonl  file-W8SfB1v0yw3AK1CDbB9TrYQE.jsonl  file-XonUY6N9sxvVar8RUdqA6N8U.jsonl  file-cqKTGqa0xQZKlQKJbtrNn6Td.jsonl  file-eR3qJzhH4VZbGJHG9DcEwr7Q.jsonl  file-gPYJPTEkTbaGHJ6UBLww4cn4.jsonl  file-nfUGLgypTtGqHX34zteAH60E.jsonl  file-oJvUncGhsGXmuIW8PKSjD6Xf.jsonl  (+2 more)
(+5 files in other folders)
