[project]
name = "workshop-babylotse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "de-dep-news-trf",
    "geopandas>=1.0.1",
    "jupyterlab>=4.2.5",
    "matplotlib>=3.9.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "python-dotenv>=1.0.1",
    "ruff>=0.6.9",
    "spacy>=3.8.2",
    "tiktoken>=0.8.0",
    "xlsxwriter>=3.2.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.51.2",
]
ollama = [
    "ollama>=0.3.3",
]
groq = [
    "groq>=0.11.0",
]

[tool.uv.sources]
de-dep-news-trf = { url = "https://github.com/explosion/spacy-models/releases/download/de_dep_news_trf-3.8.0/de_dep_news_trf-3.8.0.tar.gz" }
